--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 
@@ -18,35 +14,35 @@
    <main> 
 
     <div class="part-one">
-        <div class="imgone">
-        <img src="images/image-product-desktop.jpg" alt="image">
-        </div>
+        <img src="images/image-product-desktop.jpg" alt="image" class="img-1">
     </div> 
+
     <div class="part-two">
-        <div class="header">
-        <h2>PERFUME</h2>
+           <div class="header">
+             <h2>PERFUME</h2>
+           </div>
+           <div class="topic">
+             <h1>Gabrielle Essence Eau De Parfum</h1>
+           </div>
+           <div class="descri">
+           <p>A float,solar and voluptuous interpretation composed by Olivier Polge,Perfumer-Creator for the House of CHANEL</p>
+           </div>
+        <div class="price">
+           <div class="dis-price">
+             <p>$149.99</p>
+           </div>
+           <div class="normal-price">
+             <p>$169.99</p>
+           </div>
         </div>
-        <div class="topic">
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-        </div>
-        <div class="descri">
-        <p>A float,solar and voluptuous interpretation composed by Olivier Polge,Perfumer-Creator for the House of CHANEL</p>
-        </div>
-    <div class="price">
-        <div class="two">
-        <p>$149.99</p>
-        </div>
-        <div class="three">
-        <p>$169.99</p>
-        </div>
-    </div>
-        <div class="button">
+        
         <button title="Add to cart" type="button">
-          <div class="imgtwo">
-          <img src="images/icon-cart.svg" alt="image2">
-          </div> Add to Cart
+          <img src="images/icon-cart.svg" alt="image2" class="img-2">
+             <p class="add"> 
+                Add to Cart
+            </p>
         </button>
-        </div>
+        
     </div> 
 
    </main>
